classDiagram
direction BT
class GetNeighbors {
  + GetNeighbors(int) 
  + getDirections(int, int) int[][]
  + getStepSize() int
  + getNeighbors(Cell, Grid) List~Cell~
  + getLayers() int
  - addNeighborCellsForLayer(Cell, Grid, int[][], int, List~Cell~) void
  - addNeighborCell(Grid, int, int, List~Cell~) void
  - addAllNeighborCells(Cell, Grid, int[][], List~Cell~) void
}
class HexagonMooreNeighbors {
  + HexagonMooreNeighbors(int) 
  + getDirections(int, int) int[][]
}
class HexagonVonNeumannNeighbors {
  + HexagonVonNeumannNeighbors(int) 
  + getDirections(int, int) int[][]
}
class MooreNeighbors {
  + MooreNeighbors(int) 
  + getDirections(int, int) int[][]
}
class TriangleMooreNeighbors {
  + TriangleMooreNeighbors(int) 
  + getDirections(int, int) int[][]
  - getDownwardFacingDirections() int[][]
  - getUpwardFacingDirections() int[][]
}
class TriangleVonNeumannNeighbors {
  + TriangleVonNeumannNeighbors(int) 
  + getDirections(int, int) int[][]
}
class VonNeumannNeighbors {
  + VonNeumannNeighbors(int) 
  + getDirections(int, int) int[][]
}

HexagonMooreNeighbors  -->  GetNeighbors 
HexagonVonNeumannNeighbors  -->  GetNeighbors 
MooreNeighbors  -->  GetNeighbors 
TriangleMooreNeighbors  -->  GetNeighbors 
TriangleVonNeumannNeighbors  -->  GetNeighbors 
VonNeumannNeighbors  -->  GetNeighbors 
